fix: [PM2-3274] site button alignment in BPN table (#679)

--- a/src/components/styles/_theme-overrides.scss
+++ b/src/components/styles/_theme-overrides.scss
@@ -2212,7 +2212,11 @@ p.MuiTypography-root.MuiTypography-body3.description,
 
       .cx-table__compact-data > div > div > div {
         position: relative;
+        min-width: 100%;
+        min-width: stretch;
         min-width: -webkit-fill-available;
+        min-width: -moz-available;
+        min-width: fill-available;
 
         .MuiButton-containedPrimary {
           position: absolute;
